plugins { id 'com.android.library' }

android {
    namespace 'com.warden.controlledsandbox.runtime'
    compileSdk rootProject.ext.controlledCompileSdk
    buildToolsVersion rootProject.ext.controlledBuildTools
    defaultConfig { minSdk rootProject.ext.controlledMinSdk }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation project(':sandbox-domain')
    implementation project(':sandbox-contract')
    implementation project(':sandbox-framework')
    implementation project(':sandbox-native')
}
